--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>distributed-security-uaa</module>
+        <module>distributed-security-order</module>
     </modules>
     <packaging>pom</packaging>
 
