--- a/distributed-security-uaa/src/main/resources/application.properties
+++ b/distributed-security-uaa/src/main/resources/application.properties
@@ -5,9 +5,23 @@ spring.main.allow-bean-definition-overriding = true
 logging.level.root = debug
 logging.level.org.springframework.web = info
 
+spring.http.encoding.enabled = true
+spring.http.encoding.charset = UTF-8
+spring.http.encoding.force = true
+server.tomcat.remote_ip_header = x-forwarded-for
+server.tomcat.protocol_header = x-forwarded-proto
+server.use-forward-headers = true
+server.servlet.context-path = /uaa
 
-spring.datasource.url = jdbc:mysql://localhost:3306/test?useUnicode=true
+spring.freemarker.enabled = true
+spring.freemarker.suffix = .html
+spring.freemarker.request-context-attribute = rc
+spring.freemarker.content-type = text/html
+spring.freemarker.charset = UTF-8
+spring.mvc.throw-exception-if-no-handler-found = true
+spring.resources.add-mappings = false
+
+spring.datasource.url = jdbc:mysql://localhost:3306/user_db?useUnicode=true
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-server.servlet.context©\path?=?/uaa??
